fixes menu container and form for mobile devices spacing

--- a/style.css
+++ b/style.css
@@ -4,9 +4,9 @@ body {
 .menu--container {
   background-color: #e0e0e0;
   display: flex;
-  justify-content: space-evenly;
+  justify-content: space-between;
   height: 50px;
-  padding-bottom: 10px;
+  padding: 20px;
   align-items: center;
 }
 
@@ -43,15 +43,27 @@ body {
 
 .main--container {
   font-size: 14px;
-  padding-top: 40px;
+  padding: 26px 20px;
+}
+
+input,
+select {
+  border: 1px solid #979797;
+  width: 100%;
+  height: 32px;
+  border-radius: 4px;
+  background: #ffffff;
+  color: #888888;
+  padding: 5px 12px;
+  line-height: 22px;
+  margin-bottom: 22px;
 }
 .form--container {
   border-bottom: 2px solid #e0e0e0;
-  width: 90vw;
-  padding: 10px;
 }
 
 h3 {
+  display: none;
   width: 100%;
   text-align: center;
 }
@@ -81,7 +93,6 @@ h3 {
 }
 
 @media only screen and (min-width: 634px) and (max-width: 1023px) {
- 
   .main--container {
     font-size: 14px;
     padding-top: 40px;
@@ -122,7 +133,6 @@ h3 {
     display: none;
   }
 
- 
   .menuItens {
     border: 2px solid orange;
     width: 400px;
